--- a/kiss-account-common/pom.xml
+++ b/kiss-account-common/pom.xml
@@ -12,4 +12,10 @@
     <artifactId>kiss-account-common</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!--<distributionManagement>-->
+        <!--<snapshotRepository>-->
+            <!--<id>snapshots</id>-->
+            <!--<url>http://127.0.0.1:8081/nexus/content/repositories/snapshots</url>-->
+        <!--</snapshotRepository>-->
+    <!--</distributionManagement>-->
 </project>
