--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.datasource.url=jdbc:mysql://rm-j6ca5pt36q4h487712o.mysql.rds.aliyuncs.com
 mybatis.config-location=classpath:mybatis-config.xml
 
 logging.level.com.kiss.account.mapper.AccountMapper=debug
+
+max.accounts.size=3
