--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,10 +11,10 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 # 数据库配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-#spring.datasource.password=Helloshic7!
-spring.datasource.password=123456
-#spring.datasource.url=jdbc:mysql://rm-j6ca5pt36q4h487712o.mysql.rds.aliyuncs.com/kiss-account?characterEncoding=utf-8&useSSL=false
-spring.datasource.url=jdbc:mysql://localhost/kiss-account?characterEncoding=utf-8&useSSL=false
+spring.datasource.password=Helloshic7!
+#spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://rm-j6ca5pt36q4h487712o.mysql.rds.aliyuncs.com/kiss-account?characterEncoding=utf-8&useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost/kiss-account?characterEncoding=utf-8&useSSL=false
 
 mybatis.config-location=classpath:mybatis-config.xml
 
