--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -21,3 +21,4 @@ mybatis.config-location=classpath:mybatis-config.xml
 logging.level.com.kiss.account.mapper.AccountMapper=debug
 
 max.accounts.size=3
+account.default.password=123456
