--- a/server/pom.xml
+++ b/server/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>springfox-staticdocs</artifactId>
             <version>2.6.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
