--- a/server/pom.xml
+++ b/server/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>kiss-foundation</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-ldap</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
